--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     </head>
     <body>
         <div id="vue-app">
-            <h1>Data Binding</h1>
-            <a v-bind:href="website">The Net Ninja Website</a>
-            <input type="text" v-bind:value="name" />
+            <h1>Events</h1>
+            <button v-on:click="add(1)">Add a Year</button>
+            <button v-on:click="subtract(1)">Subtract a Year</button>
+            <button v-on:dblclick="add(10)">Add 10 Years</button>
+            <button v-on:dblclick="subtract(10)">Subtract 10 Years</button>
+            <p>My age is {{age}}</p>
+            <div id="canvas" v-on:mousemove="updateXY">{{ x }} , {{ y }}</div>
         </div>
     </body>
 
