added lesson 11 code

--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
     </head>
     <body>
         <div id="vue-app">
-            <h1>Dynamic CSS</h1>
-            <!-- <h2>Example 1</h2>
-            <div v-on:click="available = !available" v-bind:class="{available: available}">
-                <span>Ryu</span>
-            </div> -->
-            <h2>Example 2</h2>
-            <button v-on:click="nearby = !nearby">Toggle nearby</button>
-            <button v-on:click="available = !available">Toggle available</button>
-            <div v-bind:class="compClasses">
-                <span>Ryu</span>
-            </div>
+            <h1>Conditionals</h1>
+            <button v-on:click="error = !error">Toggle error</button>
+            <button v-on:click="success = !success">Toggle success</button>
+            <!--  <p v-if="error" class="error">There has been an error</p>
+            <p v-if="success" class="success">Whooo, success :)</p> -->
+            <p v-show="error" class="error">There has been an error</p>
+            <p v-show="success" class="success">Whooo, success :)</p>
         </div>
     </body>
 
