added lesson 13 code - punch bag

--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     </head>
     <body>
         <div id="vue-app">
-            <h1>Looping through lists</h1>
-            <ul>
-                <li v-for="character in characters">{{ character }}</li>
-            </ul>
-            <ul>
-                <li v-for="(ninja, index) in ninjas">{{ index }} . {{ ninja.name }} - {{ ninja.age }}</li>
-            </ul>
-            <template v-for="(ninja, index) in ninjas">
-                <h3>{{ index }} . {{ ninja.name }}</h3>
-                <p>Age - {{ ninja.age }}</p>
-            </template>
+            <!-- bag image -->
+            <div id="bag" v-bind:class="{ burst: ended }"></div>
+
+            <!-- bag health bar -->
+            <div id="bag-health">
+                <div v-bind:style="{ width: health + '%' }"></div>
+            </div>
+
+            <!-- game control buttons -->
+            <div id="controls">
+                <button v-on:click="punch" v-show="!ended">Punch</button>
+                <button v-on:click="restart">Restart</button>
+            </div>
         </div>
     </body>
 
