--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>VueJS Tutorials</title>
-        <link href="styles.css" rel="stylesheet" />
-        <script src="https://unpkg.com/vue"></script>
-    </head>
-    <body>
-        <h1>Refs</h1>
-        <div id="vue-app-one">
-            <input type="text" ref="input" />
-            <button v-on:click="readRefs">Submit</button>
-            <p>{{ output }}</p>
-        </div>
-    </body>
-
-    <script src="app.js"></script>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>cli-project</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="/dist/build.js"></script>
+  </body>
 </html>
